Updated Electron and Passky to 2.0.3

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <input id="passky-server" list="servers" name="server" type="text" autocomplete="server" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-t-md focus:outline-none focus:z-10 sm:text-sm" placeholder="Server">
               <datalist id="servers">
                 <option>https://eu1.passky.org</option>
+                <option>https://eu2.passky.org</option>
               </datalist>
             </div>
             <div>
