--- a/export.html
+++ b/export.html
@@ -34,8 +34,12 @@
               </a>
               <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-b-4 text-base focus:outline-none font-medium">
                 <option value="en">English</option>
+                <option value="zh-CN">Chinese Simplified</option>
                 <option value="de">German</option>
                 <option value="nl">Dutch</option>
+                <option value="cs">Czech</option>
+                <option value="it">Italian</option>
+                <option value="ru">Russian</option>
                 <option value="sl">Slovenian</option>
                 <option value="bs">Bosnian</option>
               </select>
@@ -65,8 +69,12 @@
           <a id="theme-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Theme</a>
           <select id="lang-link-mobile" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium">
             <option value="en">English</option>
+            <option value="zh-CN">Chinese Simplified</option>
             <option value="de">German</option>
             <option value="nl">Dutch</option>
+            <option value="cs">Czech</option>
+            <option value="it">Italian</option>
+            <option value="ru">Russian</option>
             <option value="sl">Slovenian</option>
             <option value="bs">Bosnian</option>
           </select>
