--- a/export.html
+++ b/export.html
@@ -34,14 +34,19 @@
               </a>
               <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-b-4 text-base focus:outline-none font-medium">
                 <option value="en">English</option>
-                <option value="zh-CN">Chinese Simplified</option>
-                <option value="de">German</option>
-                <option value="nl">Dutch</option>
-                <option value="cs">Czech</option>
-                <option value="it">Italian</option>
+                <option value="zh-CN">Chinese (Simplified)</option>
+                <option value="hi">Hindi</option>
+                <option value="fr">French</option>
                 <option value="ru">Russian</option>
+                <option value="de">German</option>
+                <option value="it">Italian</option>
+                <option value="pl">Polish</option>
+                <option value="cs">Czech</option>
+                <option value="sv-SE">Swedish</option>
+                <option value="nl">Dutch</option>
                 <option value="sl">Slovenian</option>
                 <option value="bs">Bosnian</option>
+                <option value="ro">Romanian</option>
               </select>
               <a id="signout-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Sign out
@@ -69,14 +74,19 @@
           <a id="theme-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Theme</a>
           <select id="lang-link-mobile" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium">
             <option value="en">English</option>
-            <option value="zh-CN">Chinese Simplified</option>
-            <option value="de">German</option>
-            <option value="nl">Dutch</option>
-            <option value="cs">Czech</option>
-            <option value="it">Italian</option>
+            <option value="zh-CN">Chinese (Simplified)</option>
+            <option value="hi">Hindi</option>
+            <option value="fr">French</option>
             <option value="ru">Russian</option>
+            <option value="de">German</option>
+            <option value="it">Italian</option>
+            <option value="pl">Polish</option>
+            <option value="cs">Czech</option>
+            <option value="sv-SE">Swedish</option>
+            <option value="nl">Dutch</option>
             <option value="sl">Slovenian</option>
             <option value="bs">Bosnian</option>
+            <option value="ro">Romanian</option>
           </select>
           <a id="signout-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
         </div>
