--- a/passwords.html
+++ b/passwords.html
@@ -29,25 +29,9 @@
               <a id="import-export-link" href="export.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Import & Export
               </a>
-              <a id="theme-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-                Theme
+              <a id="settings-link" href="settings.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                Settings
               </a>
-              <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-b-4 text-base focus:outline-none font-medium">
-                <option value="en">English</option>
-                <option value="zh-CN">Chinese (Simplified)</option>
-                <option value="hi">Hindi</option>
-                <option value="fr">French</option>
-                <option value="ru">Russian</option>
-                <option value="de">German</option>
-                <option value="it">Italian</option>
-                <option value="pl">Polish</option>
-                <option value="cs">Czech</option>
-                <option value="sv-SE">Swedish</option>
-                <option value="nl">Dutch</option>
-                <option value="sl">Slovenian</option>
-                <option value="bs">Bosnian</option>
-                <option value="ro">Romanian</option>
-              </select>
               <a id="signout-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Sign out
               </a>
@@ -79,23 +63,7 @@
         <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
           <a id="passwords-link-mobile" href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
           <a id="import-export-link-mobile" href="export.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
-          <a id="theme-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Theme</a>
-          <select id="lang-link-mobile" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium">
-            <option value="en">English</option>
-            <option value="zh-CN">Chinese (Simplified)</option>
-            <option value="hi">Hindi</option>
-            <option value="fr">French</option>
-            <option value="ru">Russian</option>
-            <option value="de">German</option>
-            <option value="it">Italian</option>
-            <option value="pl">Polish</option>
-            <option value="cs">Czech</option>
-            <option value="sv-SE">Swedish</option>
-            <option value="nl">Dutch</option>
-            <option value="sl">Slovenian</option>
-            <option value="bs">Bosnian</option>
-            <option value="ro">Romanian</option>
-          </select>
+          <a id="settings-link-mobile" href="settings.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Settings</a>
           <a id="signout-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
         </div>
       </div>
@@ -105,29 +73,13 @@
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
           <div class="primaryBorderColor shadow overflow-hidden border-b sm:rounded-lg">
-            <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
-              <tbody id="table-data" class="passwordsBackgroundColor divide-y divide-gray-200">
-              </tbody>
-            </table>
+            <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
+              <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
+                <tbody id="table-data" class="passwordsBackgroundColor divide-y divide-gray-200">
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="passwordsBackgroundColor shadow sm:rounded-lg">
-      <div class="px-4 py-5 sm:p-6">
-        <h3 id="delete-account-title" class="tertiaryColor text-lg leading-6 font-medium">
-          Delete your account
-        </h3>
-        <div class="secondaryColor mt-2 max-w-xl text-sm">
-          <p id="delete-account-text">
-            Once you delete your account, you will lose all data associated with it.
-          </p>
-        </div>
-        <div class="mt-5">
-          <button id="delete-account-btn" type="button" class="dangerButton inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md focus:outline-none sm:text-sm">
-            Delete account
-          </button>
         </div>
       </div>
     </div>
