--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
                 <input type="checkbox" class="tertiaryBackgroundColor primaryColor h-4 w-4 primaryBorderColor rounded" required>
               </div>
               <div class="ml-3 text-sm">
-                <a href="https://passky.org/ToS.pdf" target="_blank" class="primaryColor">Terms of Service</a>
+                <a id="tos" href="https://passky.org/ToS.pdf" target="_blank" class="primaryColor">Terms of Service</a>
               </div>
             </div>
           </fieldset>
@@ -90,9 +90,9 @@
             <button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
               Sign up
             </button>
-            <a id="already_have_account_link" href="index.html" class="primaryColor">
-              Already have account? Sign in here.
-            </a>
+            <button id="btn_signin" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+              Sign in
+            </button>
           </div>
         </form>
       </div>
