Updated Passky to v3.0.1

--- a/export.html
+++ b/export.html
@@ -69,7 +69,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">Passky</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="passky-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -110,7 +110,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">Lastpass</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="lastpass-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -140,7 +140,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">Bitwarden</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="bitwarden-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -160,7 +160,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">Dashlane</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="dashlane-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -190,7 +190,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">1Password</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="onepassword-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -220,7 +220,7 @@
                   <h3 class="tertiaryColor mt-6 text-lg font-medium">Keeper</h3>
               </div>
               <div>
-                  <div class="-mt-px flex divide-x divide-gray-200">
+                  <div class="-mt-px flex">
                   <div class="w-0 flex-1 flex">
                       <a id="keeper-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -250,7 +250,7 @@
                 <h3 class="tertiaryColor mt-6 text-lg font-medium">Nordpass</h3>
             </div>
             <div>
-                <div class="-mt-px flex divide-x divide-gray-200">
+                <div class="-mt-px flex">
                 <div class="w-0 flex-1 flex">
                     <a id="nordpass-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
