--- a/passwords.html
+++ b/passwords.html
@@ -69,13 +69,13 @@
       </div>
     </nav>
 
-    <div class="flex flex-col">
+    <div class="flex flex-col mt-2 lg:mt-8">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-          <div class="primaryBorderColor shadow overflow-hidden border-b sm:rounded-lg">
-            <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
+          <div class="overflow-hidden sm:rounded-lg">
+            <div class="max-w-7xl mx-auto lg:px-8">
               <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
-                <tbody id="table-data" class="passwordsBackgroundColor divide-y divide-gray-200">
+                <tbody id="table-data" class="secondaryBackgroundColor divide-y divide-gray-200">
                 </tbody>
               </table>
             </div>
