--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           </div>
 
           <div class="text-center">
-            <button id="btn_signin" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+            <button id="btn_signin" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
               Sign in
             </button>
-            <button id="btn_signup" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+            <button id="btn_signup" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
               Sign up
             </button>
-            <a href="#" id="forgot_username" class="primaryColor">
+            <a href="#" id="forgot_username" class="primaryColor focus:outline-none">
               Forgot username?
             </a>
           </div>
