--- a/register.html
+++ b/register.html
@@ -87,10 +87,10 @@
           </div>
 
           <div class="text-center">
-            <button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+            <button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
               Sign up
             </button>
-            <button id="btn_signin" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+            <button id="btn_signin" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
               Sign in
             </button>
           </div>
