--- a/settings.html
+++ b/settings.html
@@ -73,11 +73,13 @@
                             <option value="en">English</option>
                             <option value="zh-CN">Chinese (Simplified)</option>
                             <option value="hi">Hindi</option>
+                            <option value="tr">Turkish</option>
                             <option value="fr">French</option>
                             <option value="ru">Russian</option>
                             <option value="de">German</option>
                             <option value="it">Italian</option>
                             <option value="pl">Polish</option>
+                            <option value="el">Greek</option>
                             <option value="cs">Czech</option>
                             <option value="sv-SE">Swedish</option>
                             <option value="no">Norwegian</option>
@@ -98,7 +100,9 @@
                     <div class="mt-1 sm:mt-0 sm:col-span-2">
                         <select id="settings-theme" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 text-base focus:outline-none font-medium">
                             <option value="dark">Dark</option>
+                            <option value="dracula">Dracula</option>
                             <option value="blue">Blue</option>
+                            <option value="gray">Gray</option>
                             <option value="light">Light</option>
                         </select>
                     </div>
