Added Yubikey integration

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div>
               <label for="otp" class="sr-only">OTP</label>
-              <input id="otp" name="otp" type="number" autocomplete="off" class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-b-md focus:outline-none focus:z-10 sm:text-sm" placeholder="OTP">
+              <input id="otp" name="otp" type="text" autocomplete="off" class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-b-md focus:outline-none focus:z-10 sm:text-sm" placeholder="OTP">
             </div>
           </div>
 
