Changed language name

--- a/settings.html
+++ b/settings.html
@@ -102,7 +102,7 @@
                             <option value="sl">Slovenian</option>
                             <option value="bs">Bosnian</option>
                             <option value="ro">Romanian</option>
-                            <option value="id">Bahasa Indonesia</option>
+                            <option value="id">Indonesian</option>
                           </select>
                     </div>
                 </div>
