--- a/settings.html
+++ b/settings.html
@@ -87,11 +87,13 @@
                             <option value="en">English</option>
                             <option value="zh-CN">Chinese (Simplified)</option>
                             <option value="hi">Hindi</option>
-                            <option value="tr">Turkish</option>
-                            <option value="fr">French</option>
                             <option value="ar">Arabic</option>
+                            <option value="fr">French</option>
                             <option value="ru">Russian</option>
+                            <option value="id">Indonesian</option>
                             <option value="de">German</option>
+                            <option value="tr">Turkish</option>
+                            <option value="ko">Korean</option>
                             <option value="it">Italian</option>
                             <option value="pl">Polish</option>
                             <option value="el">Greek</option>
@@ -102,9 +104,12 @@
                             <option value="sl">Slovenian</option>
                             <option value="bs">Bosnian</option>
                             <option value="ro">Romanian</option>
-                            <option value="id">Indonesian</option>
+                            <option value="uk">Ukrainian</option>
                           </select>
                     </div>
+                    <label class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+                      Missing language? Translate it on <a class="primaryColor" href="https://crowdin.com/project/passky" target="_blank">Crowdin</a>.
+                    </label>
                 </div>
             </li>
             <!-- Themes -->
@@ -153,6 +158,9 @@
                         Enable
                       </button>
                     </div>
+                    <label class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+                      Only available in the browser extension.
+                    </label>
                 </div>
             </li>
             <!-- 2FA -->
