Updated Electron to v19.0.0 and Passky Client to v6.1.0

--- a/export.html
+++ b/export.html
@@ -306,6 +306,46 @@
             </div>
           </div>
         </li>
+        <li class="secondaryBackgroundColor col-span-1 flex flex-col text-center rounded-lg shadow divide-y divide-gray-200">
+          <div class="flex-1 flex flex-col p-8">
+            <img id="chromium-logo" class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" src="images/chromium.png" alt="Chromium">
+            <h3 class="tertiaryColor mt-6 text-lg font-medium">Chromium</h3>
+          </div>
+          <div>
+            <div class="-mt-px flex">
+              <div class="w-0 flex-1 flex">
+                <a id="chromium-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                    <path d="M5 13v-8a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-5.5m-9.5 -2h7m-3 -3l3 3l-3 3" />
+                  </svg>
+                  <span id="chromium-import-btn-text" class="ml-3">Import</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="secondaryBackgroundColor col-span-1 flex flex-col text-center rounded-lg shadow divide-y divide-gray-200">
+          <div class="flex-1 flex flex-col p-8">
+            <img id="firefox-logo" class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" src="images/firefox.png" alt="Firefox">
+            <h3 class="tertiaryColor mt-6 text-lg font-medium">Firefox</h3>
+          </div>
+          <div>
+            <div class="-mt-px flex">
+              <div class="w-0 flex-1 flex">
+                <a id="firefox-import-btn" href="#" class="importExportButtons relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm font-medium border border-transparent">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                    <path d="M5 13v-8a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-5.5m-9.5 -2h7m-3 -3l3 3l-3 3" />
+                  </svg>
+                  <span id="firefox-import-btn-text" class="ml-3">Import</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </li>
       </ul>
     </div>
     <div id="dialog" class="fixed z-10 inset-0 overflow-y-auto invisible" aria-labelledby="dialog-title" role="dialog" aria-modal="true">
