--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
        </form>
       </div>
     </div>
+    <script>
+      if('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('service-worker.js');
+        });
+      }
+    </script>
     <script src="js/aes.js"></script>
     <script src="js/default-functions.js"></script>
     <script src="js/sha512.js"></script>
