--- a/settings.html
+++ b/settings.html
@@ -85,11 +85,15 @@
                     <div class="mt-1 sm:mt-0 sm:col-span-2">
                         <select id="settings-lang" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 text-base focus:outline-none font-medium">
                             <option value="en">English</option>
+                            <option value="ja">Japanese</option>
                             <option value="zh-CN">Chinese (Simplified)</option>
+                            <option value="zh-TW">Chinese (Traditional)</option>
                             <option value="hi">Hindi</option>
                             <option value="ar">Arabic</option>
+                            <option value="es-ES">Spanish</option>
                             <option value="fr">French</option>
                             <option value="ru">Russian</option>
+                            <option value="pt-PT">Portuguese</option>
                             <option value="id">Indonesian</option>
                             <option value="de">German</option>
                             <option value="tr">Turkish</option>
