Updated to Passky v6.3.0

--- a/passwords.html
+++ b/passwords.html
@@ -52,10 +52,12 @@
           </div>
           <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
             <div class="flex-shrink-0">
-              <input type="text" id="search" class="relative inline-flex shadow focus:outline-none px-4 py-2 sm:text-sm rounded-md" placeholder="Search">
-              <button id="add-password-btn" type="button" class="primaryButton relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md focus:outline-none">
-                Add Password
-              </button>
+              <span class="relative z-0 inline-flex shadow-sm rounded-md">
+                <input type="text" id="search" class="relative inline-flex shadow focus:outline-none px-4 py-2 sm:text-sm rounded-l-md" placeholder="Search">
+                <button id="add-password-btn" type="button" class="primaryButton relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-r-md focus:outline-none">
+                  Add Password
+                </button>
+              </span>
             </div>
           </div>
           <div class="flex items-center lg:hidden">
@@ -99,7 +101,7 @@
                   </div>
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
                     <dt class="text-sm font-medium secondaryColor truncate">Client Version</dt>
-                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">6.1.0</dd>
+                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">6.3.0</dd>
                   </div>
                 </dl>
               </div>
@@ -139,7 +141,7 @@
             <button id="dialog-button" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
               Delete
             </button>
-            <button id="dialog-button-cancel" type="button" class="cancelButton mt-2 w-full inline-flex justify-center rounded-md border px-4 py-2 text-base font-medium shadow-sm focus:outline-none sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+            <button id="dialog-button-cancel" type="button" class="cancelButton sm:ml-2 ml-0 mt-2 sm:mt-0 inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
               Cancel
             </button>
           </div>
