--- a/export.html
+++ b/export.html
@@ -368,7 +368,7 @@
           </div>
           <div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
             <button id="dialog-button" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium sm:w-auto sm:text-sm"></button>
-            <button id="dialog-button-cancel" type="button" class="cancelButton mt-2 w-full inline-flex justify-center rounded-md border px-4 py-2 text-base font-medium shadow-sm focus:outline-none sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+            <button id="dialog-button-cancel" type="button" class="cancelButton sm:ml-2 ml-0 mt-2 sm:mt-0 inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium sm:w-auto sm:text-sm">
               Cancel
             </button>
           </div>
