--- a/settings.html
+++ b/settings.html
@@ -125,7 +125,10 @@
                     <div class="mt-1 sm:mt-0 sm:col-span-2">
                         <select id="settings-theme" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 text-base focus:outline-none font-medium">
                             <option value="dark">Dark</option>
+                            <option value="solarizedDark">Solarized Dark</option>
+                            <option value="tokyoNight">Tokyo Night</option>
                             <option value="dracula">Dracula</option>
+                            <option value="monokai">Monokai</option>
                             <option value="blue">Blue</option>
                             <option value="gray">Gray</option>
                             <option value="light">Light</option>
@@ -149,6 +152,22 @@
                             <option class="addMinutes" value="60">60</option>
                         </select>
                     </div>
+                </div>
+            </li>
+            <!-- Website Icons -->
+            <li class="secondaryBackgroundColor shadow overflow-hidden rounded-md px-6 py-4">
+                <div>
+                    <label id="label-website-icons" class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+                      Website Icons
+                    </label>
+                    <div class="mt-5">
+                      <button id="toggle-website-icons" type="button" class="successButton font-bold inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md focus:outline-none sm:text-sm">
+                        Enable
+                      </button>
+                    </div>
+                    <label class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+                      Enabling website icons might reduce your privacy.
+                    </label>
                 </div>
             </li>
             <!-- Auto Search -->
