Updated to Passky v7.0.0

--- a/settings.html
+++ b/settings.html
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-    
+
       <div class="lg:hidden">
         <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
           <a id="passwords-link-mobile" href="passwords.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
@@ -130,6 +130,7 @@
                             <option value="dracula">Dracula</option>
                             <option value="monokai">Monokai</option>
                             <option value="blue">Blue</option>
+														<option value="nord">Nord</option>
                             <option value="gray">Gray</option>
                             <option value="light">Light</option>
                         </select>
