--- a/export.html
+++ b/export.html
@@ -25,7 +25,7 @@
     <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
     <script src="js/aes.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery.min.js"></script>
   </head>
   <body class="primaryBackgroundColor">
     <nav class="secondaryBackgroundColor shadow">
@@ -33,8 +33,7 @@
         <div class="flex justify-between h-16">
           <div class="flex px-2 lg:px-0">
             <div class="flex-shrink-0 flex items-center">
-              <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
-              <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
+              <img id="logo" class="h-8 w-auto animate-[spin_0.7s_ease-in-out]" src="images/logo.png" alt="Passky">
             </div>
             <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
               <a id="passwords-link" href="passwords.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
