--- a/passwords.html
+++ b/passwords.html
@@ -32,8 +32,7 @@
         <div class="flex justify-between h-16">
           <div class="flex px-2 lg:px-0">
             <div class="flex-shrink-0 flex items-center">
-              <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
-              <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
+              <img id="logo" class="h-8 w-auto animate-[spin_0.7s_ease-in-out]" src="images/logo.png" alt="Passky">
             </div>
             <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
               <a id="passwords-link" href="#" class="mainMenuLinkSelected inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
@@ -73,7 +72,7 @@
           </div>
         </div>
       </div>
-    
+
       <div class="lg:hidden">
         <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
           <a id="passwords-link-mobile" href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
@@ -101,7 +100,7 @@
                   </div>
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
                     <dt class="text-sm font-medium secondaryColor truncate">Client Version</dt>
-                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">7.0.0</dd>
+                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">7.1.0</dd>
                   </div>
                 </dl>
               </div>
