--- a/settings.html
+++ b/settings.html
@@ -32,8 +32,7 @@
         <div class="flex justify-between h-16">
           <div class="flex px-2 lg:px-0">
             <div class="flex-shrink-0 flex items-center">
-              <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
-              <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
+              <img id="logo" class="h-8 w-auto animate-[spin_0.7s_ease-in-out]" src="images/logo.png" alt="Passky">
             </div>
             <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
               <a id="passwords-link" href="passwords.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
